--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cropped Iframe</title>
+  <title>Amozm.0905</title>
   <style>
     html, body {
       margin: 0;
