--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Important for responsiveness -->
   <title>Amozm.0905</title>
   <style>
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
       overflow: hidden;
     }
     .iframe-wrapper {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       overflow: hidden;
       position: relative;
     }
     iframe {
-      width: 100%;
-      height: calc(100% + 50px); /* 100px more to shift up */
+      width: 100vw;
+      height: calc(100vh + 50px); /* Extra height to shift content up */
       border: none;
-      transform: translateY(-50px); /* Crop 100px from top */
+      transform: translateY(-50px); /* Shift to crop top */
+      display: block;
     }
   </style>
 </head>
