--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      width: 100%;
       overflow: hidden;
     }
     .iframe-wrapper {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
       position: relative;
     }
     iframe {
-      width: 100vw;
-      height: calc(100vh + 50px); /* Extra height to shift content up */
+      width: 100%;
+      height: calc(100% + 50px); /* Extra height to shift content up */
       border: none;
       transform: translateY(-50px); /* Shift to crop top */
       display: block;
